@@ -1,7 +1,7 @@
 wShell=$(which bash)
 #!${Shell}
 
-SupportV="0.1.38"
+SupportV="0.1.40"
 
 ProgDir=$1
 shift
@@ -71,6 +71,11 @@ UseC++()
 		MenuHelp)
 			echo -e "new <file> {main|header|component} : \"create new ${Lang} source file\""
 			echo -e "cpl, compile\t\t\t: \"make code executable\""
+			;;
+		ProjectHelp)
+			echo ""
+			echo -e "${Lang} specific project help"
+			echo ""
 			;;
 		getCode)
 			local name=$1
@@ -388,6 +393,25 @@ UseC++()
 				cd ${path}/src
 			fi
 			echo ${path}
+			;;
+		projectMode)
+			local mode=$1
+			case ${ProjectType} in
+				Generic)
+					case ${mode} in
+#						main|test)
+#							echo "${mode}"
+#							;;
+						*)
+							;;
+					esac
+					;;
+				*)
+					if [ -f ${TemplateProjectDir}/${Lang}.${type} ]; then
+						${TemplateProjectDir}/${Lang}.${type} projectMode ${mode}
+					fi
+					;;
+			esac
 			;;
 		lscpl)
 			local project
