@@ -1,7 +1,7 @@
 Shell=$(which bash)
 #!${Shell}
 
-SupportV="0.1.31"
+SupportV="0.1.32"
 
 ProgDir=$1
 shift
@@ -72,6 +72,11 @@ UsePython()
 			echo -e "new <file>\t\t\t: \"create new ${Lang} script\""
 			echo -e "cpl, compile\t\t\t: \"make code executable\""
 			echo -e "shell\t\t\t\t: run shell for testing"
+			;;
+		ProjectHelp)
+			echo ""
+			echo -e "${Lang} specific project help"
+			echo ""
 			;;
 		getCode)
 			local name=$1
@@ -347,6 +352,25 @@ UsePython()
 				cd ${path}/src
 			fi
 			echo ${path}
+			;;
+		projectMode)
+			local mode=$1
+			case ${ProjectType} in
+				Generic)
+					case ${mode} in
+#						main|test)
+#							echo "${mode}"
+#							;;
+						*)
+							;;
+					esac
+					;;
+				*)
+					if [ -f ${TemplateProjectDir}/${Lang}.${type} ]; then
+						${TemplateProjectDir}/${Lang}.${type} projectMode ${mode}
+					fi
+					;;
+			esac
 			;;
 		lscpl)
 			local project
