@@ -1,7 +1,7 @@
 Shell=$(which bash)
 #!${Shell}
 
-SupportV="0.1.29"
+SupportV="0.1.30"
 
 ProgDir=$1
 shift
@@ -72,6 +72,11 @@ UseRuby()
 		MenuHelp)
 			echo -e "new <file>\t\t\t: \"create new ${Lang} script\""
 			echo -e "cpl, compile\t\t\t: \"make code executable\""
+			;;
+		ProjectHelp)
+			echo ""
+			echo -e "${Lang} specific project help"
+			echo ""
 			;;
 		pgLang)
 			local HasLang=$(which ${LangRun} 2> /dev/null)
@@ -337,6 +342,25 @@ UseRuby()
 				cd ${path}/src
 			fi
 			echo ${path}
+			;;
+		projectMode)
+			local mode=$1
+			case ${ProjectType} in
+				Generic)
+					case ${mode} in
+#						main|test)
+#							echo "${mode}"
+#							;;
+						*)
+							;;
+					esac
+					;;
+				*)
+					if [ -f ${TemplateProjectDir}/${Lang}.${type} ]; then
+						${TemplateProjectDir}/${Lang}.${type} projectMode ${mode}
+					fi
+					;;
+			esac
 			;;
 		lscpl)
                         local project
